# arcanum

./: .gitignore  README.md  index.html  jsconfig.json  package-lock.json  package.json  vite.config.js
.github/workflows/: build.yml  rust-clippy.yml
src/: +layout.svelte  App.svelte  Hidden.svelte  main.js  style.sass
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  mobile.rs  rss.rs  xml.rs
src-tauri/src/routes/: mod.rs  parser.rs  rss.rs
src/lib/: CollapsibleSection.svelte  Home.svelte  keyboard.ts  stores.ts
